# rubik2x2-code

./: Cargo.toml
src/: cli.rs  cube.rs  error.rs  log.rs  main.rs  permutations.rs  solver.rs  ui.rs
